# rusty-light

./: .gitignore  Cargo.toml  README.md  flash.sh  memory.x
.githooks/: pre-commit
.github/workflows/: rust.yml
blackboard/: Cargo.toml  README.md  command_file.jlink  flash.sh
blackboard/src/: button.rs  joystick.rs  main.rs  pwm_led.rs  rgb.rs
console_sim/: Cargo.toml
console_sim/src/: dummy_led.rs  dummy_rgb.rs  keyboard_pin.rs  main.rs  power_dissipation.rs
embassy/nrf52840/: .gitignore  Cargo.toml  README.md  memory.x
light_control/: Cargo.toml
light_control/src/: battery_voltage_to_capacity.rs  bsp.rs  control.rs  edt.rs  lib.rs  perceived_light_math.rs  voltage_to_temp.rs
light_control/tests/: edt_tests.rs  light_control_tests.rs
src/: control.rs  event_loop.rs  led.rs  main.rs  pin.rs  rgb.rs
stm32-nucleo/: Cargo.toml  README.md  command_file.jlink  flash.sh
stm32-nucleo/.cargo/: config
stm32-nucleo/src/: adc.rs  button.rs  main.rs  pwm_led.rs  rgb.rs
