[package]
authors = [
    "Alexey Serdyuk <alexey.serdyuk91@gmail.com>",
    "Yuriy Kulikov <yuriy.kulikov.87@gmail.com>"
]
edition = "2018"
name = "blackboard"
version = "0.1.0"

[dependencies]
nb = "1.0.0"
cortex-m = "0.7.1"
cortex-m-rt = "0.6.10"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
jlink_rtt = {git = "https://github.com/wez/jlink_rtt"}

[dependencies.stm32g0xx-hal]
version = "^0.0.9"
features = ["stm32g031", "rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
